@@ -2,23 +2,22 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertThat;
 
 public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -27,12 +26,15 @@ public class NotifyAccountTest {
     }
     @Test
     public void whenDuplicateDeleted() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("123", "Petr Arsentev", "000001")
         );
-        HashSet<Account> expect = new HashSet<>();
-        expect.add(new Account("123", "Petr Arsentev", "eDer3432f"));
+        HashSet<Account> expect = new HashSet<>(
+                List.of(
+                    new Account("123", "Petr Arsentev", "eDer3432f")
+                )
+        );
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
 }
